--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@ng-select/ng-select": "^5.0.9",
     "crypto-js": "^4.0.0",
     "moment": "^2.29.1",
+    "ngx-quill": "^13.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
