--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "empiria-land-intranet",
   "author": "La Vía Óntica SC, Ontica LLC and contributors.",
-  "version": "5.0.0-alpha.1",
+  "version": "5.0.0-alpha.2",
   "description": "Empiria Land Intranet Application",
   "license": "AGPL-3.0",
   "homepage": "http://ontica.org/empiria-land",
@@ -11,6 +11,7 @@
     "url": "https://github.com/Ontica/Empiria.Land.Intranet"
   },
   "contributors": [
+    "Janeth Montero <janeth.montero@ontica.org>",
     "José Manuel Cota <jmcota@ontica.org>"
   ],
   "keywords": [
@@ -55,18 +56,18 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
+    "@angular/animations": "^11.0.4",
+    "@angular/cdk": "^11.0.2",
+    "@angular/common": "^11.0.4",
+    "@angular/compiler": "^11.0.4",
+    "@angular/core": "^11.0.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/material-moment-adapter": "^11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
+    "@angular/forms": "^11.0.4",
+    "@angular/material": "^11.0.2",
+    "@angular/material-moment-adapter": "^11.0.2",
+    "@angular/platform-browser": "^11.0.4",
+    "@angular/platform-browser-dynamic": "^11.0.4",
+    "@angular/router": "^11.0.4",
     "@ng-select/ng-select": "^5.0.9",
     "crypto-js": "^4.0.0",
     "moment": "^2.29.1",
@@ -77,11 +78,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
+    "@types/jasmine": "^3.6.2",
+    "@types/node": "^12.19.8",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
