--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^11.2.12",
-    "@angular/cdk": "^11.2.11",
-    "@angular/common": "^11.2.12",
-    "@angular/compiler": "^11.2.12",
-    "@angular/core": "^11.2.12",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.2.12",
-    "@angular/material": "^11.2.11",
-    "@angular/material-moment-adapter": "^11.2.11",
-    "@angular/platform-browser": "^11.2.12",
-    "@angular/platform-browser-dynamic": "^11.2.12",
-    "@angular/router": "^11.2.12",
+    "@angular/animations": "^12.2.16",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "^12.2.16",
+    "@angular/material": "^12.2.13",
+    "@angular/material-moment-adapter": "^12.2.13",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@ng-select/ng-select": "^5.0.9",
     "crypto-js": "^4.0.0",
     "moment": "^2.29.1",
@@ -75,12 +75,12 @@
     "quill": "^1.3.7",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.11",
-    "@angular/cli": "^11.2.11",
-    "@angular/compiler-cli": "^11.2.12",
+    "@angular-devkit/build-angular": "^12.2.16",
+    "@angular/cli": "^12.2.16",
+    "@angular/compiler-cli": "^12.2.16",
     "@types/jasmine": "^3.6.2",
     "@types/node": "^12.19.8",
     "codelyzer": "^6.0.0",
@@ -94,6 +94,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "4.2"
   }
 }
