--- a/package.json
+++ b/package.json
@@ -56,34 +56,34 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.16",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/core": "^12.2.16",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "^12.2.16",
-    "@angular/material": "^12.2.13",
-    "@angular/material-moment-adapter": "^12.2.13",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/router": "^12.2.16",
-    "@ng-select/ng-select": "^5.0.9",
-    "crypto-js": "^4.0.0",
+    "@angular/animations": "^13.3.0",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^13.3.0",
+    "@angular/compiler": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/forms": "^13.3.0",
+    "@angular/material": "^13.3.1",
+    "@angular/material-moment-adapter": "^13.3.1",
+    "@angular/platform-browser": "^13.3.0",
+    "@angular/platform-browser-dynamic": "^13.3.0",
+    "@angular/router": "^13.3.0",
+    "@ng-select/ng-select": "^8.1.1",
+    "crypto-js": "^4.1.1",
     "moment": "^2.29.1",
-    "ngx-quill": "^13.0.1",
+    "ng-table-virtual-scroll": "^1.4.0",
+    "ngx-quill": "^16.2.0",
     "quill": "^1.3.7",
-    "rxjs": "~6.6.7",
+    "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.16",
-    "@angular/cli": "^12.2.16",
-    "@angular/compiler-cli": "^12.2.16",
+    "@angular-devkit/build-angular": "^13.3.0",
+    "@angular/cli": "^13.3.0",
+    "@angular/compiler-cli": "^13.3.0",
     "@types/jasmine": "^3.6.2",
     "@types/node": "^12.19.8",
-    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
@@ -93,7 +93,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "4.2"
+    "typescript": "4.6.3"
   }
 }
