--- a/package.json
+++ b/package.json
@@ -80,10 +80,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.0",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
     "@types/jasmine": "^3.6.2",
     "@types/node": "^12.19.8",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "eslint": "^8.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
