--- a/src/assets/img/favicon/manifest.json
+++ b/src/assets/img/favicon/manifest.json
@@ -5,13 +5,14 @@
   "dir": "ltr",
   "display": "standalone",
   "orientation": "portrait",
-  "icons": [{
+  "icons": [
+    {
       "src": "/assets/img/favicon/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src":"/assets/img/favicon/android-chrome-256x256.png",
+      "src": "/assets/img/favicon/android-chrome-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     }
