Remove build warnings

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "quill",
+              "crypto-js",
+              "moment"
+            ],
             "outputPath": "dist/land-intranet",
             "index": "src/index.html",
             "main": "src/main.ts",
