--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "ng-table-virtual-scroll": "1.5",
     "ngx-quill": "^17.0.0",
     "quill": "^1.3.7",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.8.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -101,6 +101,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "4.7"
+    "typescript": "^4.8.2"
   }
 }
