--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@angular/router": "^15.2.10",
     "@ng-select/ng-select": "^10.0.4",
     "crypto-js": "^4.1.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ng-table-virtual-scroll": "^1.6.1",
     "ngx-quill": "^20.0.0",
