Sync core modules with latest updates (core, main-layout, shared)

--- a/package.json
+++ b/package.json
@@ -68,13 +68,14 @@
     "@angular/platform-browser-dynamic": "^17.3.4",
     "@angular/router": "^17.3.4",
     "@ng-select/ng-select": "^12.0.7",
-    "@types/karma": "^5.0.1",
     "@types/quill": "^2.0.14",
+    "@typescript-eslint/scope-manager": "^7.4.0",
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "ng-table-virtual-scroll": "^1.6.1",
     "ngx-quill": "^25.1.3",
+    "pako": "^2.1.0",
     "quill": "^2.0.0-rc.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
